--- a/birdscan-frontend/package.json
+++ b/birdscan-frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite ",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -15,6 +15,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^15.7.3",
+    "react-router": "^7.8.2",
+    "react-router-dom": "^7.8.2",
     "translate-projects-react": "^0.0.4"
   },
   "devDependencies": {
