--- a/birdscan-frontend/package.json
+++ b/birdscan-frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.12.2",
     "i18next": "^25.5.2",
     "i18next-http-backend": "^3.0.2",
+    "jwt-decode": "^4.0.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "react": "^19.1.1",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/axios": "^0.9.36",
+    "@types/jwt-decode": "^2.2.1",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
