--- a/birdscan-backend/package.json
+++ b/birdscan-backend/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -30,8 +31,11 @@
     "@nestjs/serve-static": "^5.0.3",
     "@prisma/client": "^6.16.1",
     "bcrypt": "^6.0.0",
+    "cache-manager": "^7.2.2",
+    "cache-manager-ioredis": "^1.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "ioredis": "^5.8.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
